fixes to new search overflow

--- a/app/assets/stylesheets/base/dropdowns.scss
+++ b/app/assets/stylesheets/base/dropdowns.scss
@@ -33,6 +33,11 @@
   z-index: 2;
 }
 
+.dropdown {
+  max-height: 180px;
+  overflow: auto;
+}
+
 .dropdown.active {
   opacity: 1;
   pointer-events: auto;
@@ -40,8 +45,7 @@
   width: 100.7%;
   margin-left: -16px;
   border: 1px solid #d8dcdd;
-  max-height: 180px;
-  overflow: auto;
+
   margin-top: 15px;
   padding-left: 0;
 }
