--- a/app/assets/stylesheets/base/search.scss
+++ b/app/assets/stylesheets/base/search.scss
@@ -965,6 +965,21 @@
   }
 }
 
+.searchMultiselectDropdown {
+  .multiSelectHalf {
+    width: 50%;
+    height: 100%;
+    float:left;
+    padding: 20px;
+    .multiSelectLabel {
+      display: block;
+      line-height: initial;
+      font-family: "PNBold";
+    }
+  }
+}
+
+
 .searchMultiselectDropdown.active {
   background-color: #EFF1F1;
   box-shadow: 1px 2px 10px 2px rgba(0, 0, 0, 0.2);
@@ -983,17 +998,7 @@
     right: 16px;
     font-size: 20px;
   }
-  .multiSelectHalf {
-    width: 50%;
-    height: 100%;
-    float:left;
-    padding: 20px;
-    .multiSelectLabel {
-      display: block;
-      line-height: initial;
-      font-family: "PNBold";
-    }
-  }
+
   .multiSelectSelector {
     margin-top: 15px;
     overflow: auto;
